# auto-commit-ai

./: .auto_commit_ai.env.template  .env.template  .gitignore  .gitlab-ci.yml  README.md  _.gitlab-ci.yml  custom_prompts_example.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: sonarcloud.yml
auto_commit_ai/: __init__.py  cli.py  config.py  core.py  git_utils.py
auto_commit_ai/providers/: __init__.py  azure.py  base.py  factory.py  google.py  ollama.py  openai.py  prompts.py
