[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-commit-ai"
# version = "0.1.1"
description = "Generate automatic commit messages using AI"
authors = [{ name = "Toni Miquel Llull", email = "tonimiquel.llull@gmail.com" }]
license = { text = "GNU AGPL v3" }
readme = "README.md"
requires-python = ">=3.10"

# Dynamic dependencies
dynamic = ["dependencies", "version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://gitlab.com/tmllull/auto-commit-ai"
Repository = "https://gitlab.com/tmllull/auto-commit-ai"
Issues = "https://gitlab.com/tmllull/auto-commit-ai/issues"

[project.scripts]
auto-commit-ai = "auto_commit_ai.cli:main"
acai = "auto_commit_ai.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "auto_commit_ai._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_commit_ai*"]

[tool.setuptools.package-data]
auto_commit_ai = ["*.txt", "*.md"]

[tool.setuptools_scm]
